src/app/views/pages/panel/layouts/issues/issues.scss
@use '../../../../styles/settings/mixin' as mixin;
main.issues-list {
	.left .card {
		height: calc(100vh - 74px);
	}
}
main.issue-detail {
	width: 100%;
	padding-inline-end: 0px;
	padding-inline-start: 75px;

	.left {
		// flex: 1 1 70%;
		// width: 70%;
		// background-color: var(--primary-color);
		// border: 1px solid var(--primary-color-300);
		// padding-inline: 0;
		> div {
			border-left: 1px solid var(--primary-color-300);
			border-right: 1px solid var(--primary-color-300);
		}
		.header {
			display: flex;
			align-items: stretch;
			border-bottom: 1px solid var(--primary-color-300);
			background-color: var(--primary-color);
			font-family: Roboto;
			color: var(--tertiary-color-200);
			height: 50px;
			padding: 0px;

			> div {
				// border-right: 1px solid var(--primary-color-300);
				display: flex;
				align-items: center;
				padding: 0 13px;
			}

			.back {
				transition: all 0.2s;
				border-right: 1px solid var(--primary-color-300);
				border-top: 1px solid var(--primary-color-300);

				&:hover {
					background-color: var(--primary-color-400);
				}
			}

			input {
				height: 100%;
			}

			.name {
				text-transform: uppercase;
				font-weight: 700;
				font-size: 14px;
				border-right: none;
				border-top: 1px solid var(--primary-color-300);
			}

			.edit {
				margin-left: auto;
				border-left: 1px solid var(--primary-color-300);
				transition: all 0.2s;
				color: var(--secondary-color-50);
				border-top: 1px solid var(--primary-color-300);

				&_btn {
					cursor: pointer;
					display: flex;
					align-items: center;
					justify-content: center;
					flex: 1 1;
					height: 100%;
					width: 45px;
					padding: 0;
				}

				&.on {
					color: var(--primary-color);
					background-color: var(--tertiary-color-700);
					border-color: var(--tertiary-color-700);

					&:hover {
						background-color: var(--tertiary-color-400);
						border-color: var(--tertiary-color-400);
					}
				}

				&:hover {
					background-color: var(--primary-color-400);
					border-color: var(--primary-color-400);
				}
			}

			.save {
				cursor: pointer;
				border-right: 0px;
				transition: all 0.2s;
				color: var(--secondary-color-50);
				border-top: 1px solid var(--primary-color-300);

				&.on {
					color: var(--primary-color);
					background-color: var(--secondary-color-50);
					border-color: var(--secondary-color-50);

					&:hover {
						background-color: var(--secondary-color-300);
						border-color: var(--secondary-color-300);
					}
				}

				&:hover {
					background-color: var(--primary-color-400);
					border-color: var(--primary-color-400);
				}
			}

			@include mixin.respond(small) {
				width: 100%;
				padding-block-start: 10px;
			}
		}

		.info {
			display: flex;
			align-items: stretch;
			column-gap: 12px;
			font-family: Roboto;
			text-transform: uppercase;
			font-size: 12px;
			height: 40px;
			border-bottom: 1px solid var(--primary-color-300);
			padding: 0 32px;

			select {
				color: var(--tertiary-color-300);
			}

			.issue-detail-select {
				display: flex;
				align-items: center;
			}

			.issue-detail-select:first-child {
				border-right: 1px solid var(--primary-color-300);
			}

			div {
				display: flex;
				align-items: center;
				font-weight: bolder;
				color: var(--secondary-color-50);
				padding-right: 20px;

				span {
					color: var(--tertiary-color-200);
					margin-left: 5px;
				}
			}
		}
	}

	.right {
		// flex: 1 1 25%;
		height: 100%;
		// padding-inline: 0px;
		// width: 30%;

		@include mixin.respond(small) {
			width: 100%;
		}
	}

	@include mixin.respond(small) {
		display: flex;
		flex-direction: column;
		padding-inline-start: 10px;
	}
}
main.issues-list {
	padding-inline-end: 0;

	.left {
		width: 70%;
	}

	.right {
		width: 30%;
	}
}

[data-theme='dark'] {
	.variant-1 {
		width: 32rem;
		top: -22dvh;
		right: 17dvw;
		filter: blur(130px) brightness(0.45) opacity(0.4);
		background: rgba(255, 255, 255, 0.7607843137);
		z-index: 5;
	}

	.variant-2 {
		width: 23rem;
		bottom: 30dvh;
		left: 5dvw;
		filter: blur(120px) brightness(0.5) opacity(0.4);
	}

	main.issues-list {
		.left {
			.header {
				.save {
					&.on {
						color: var(--tertiary-color-50);
					}
				}
			}
		}

		.right {
			// box-shadow: rgb(0, 0, 0) -20px 0px 120px -55px;

			.card.stats {
				.content {
					.stat {
						background-color: transparent;
					}
				}
			}
		}

		@include mixin.respond(small) {
			min-height: auto;
			height: 84dvh;
		}
	}
	main.issue-detail {
		.info {
			background: rgba(18, 26, 35, 0.3);
		}
	}
}

.icon-container {
	width: 100%;
	background-color: var(--primary-color);
	color: var(--primary-color);
}

